# exodusii

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  setup.py
exodusii/: .flake8  __init__.py  allclose.py  config.py  copy.py  element.py  ex_params.py  exodus_h.py  exoread.py  extension.py  file.py  find_in_region.py  lineout.py  nc.py  parallel_file.py  put_solution.py  region.py  similar.py  util.py
test/: conftest.py  parallel_read.py  parallel_write.py  pytest.ini  region.py  serial_read.py  serial_write.py  test.sh
test/data/: edges.base.exo  edges.exo.4.0  edges.exo.4.1  edges.exo.4.2  edges.exo.4.3  mkmesh.gen  mkmesh.par.2.0  mkmesh.par.2.1  noh.exo  noh.exo.3.0  noh.exo.3.1  noh.exo.3.2
